# will_byers

./: .gitignore  README.md  check_audio_devices.py  christmas_tree.py  claude_led_chat.py  gen_index_map.py  happy_holoween.py  neopixel_simpletest.py  pyproject.toml  random_colors.py  record_audio.py  record_audio_and_transcribe.py  slow_changing_random.py  static_messages.py
will_byers/: __init__.py  chat.py  create_mapping.py  led_config.py  voice_chat.py  wake_word_voice_chat.py  whisper_server.py
will_byers/demos/: __init__.py  static_messages.py
